# NRiP-V2

./: CMakeLists copy.txt  CMakeLists.txt  licence.md  readme.md  run.sh
src/: main.cpp
src/MainRecursion/: CMakeLists.txt  MainRecursion.cpp  MainRecursion.hpp
src/differentiate/: CMakeLists.txt  differentiate.cpp  differentiate.hpp
src/fxCompute/: CMakeLists.txt  fxCompute.cpp  fxCompute.hpp
src/inputProcessor/: CMakeLists.txt  inputProcessor.cpp  inputProcessor.hpp
src/newtonRaphsonIteration/: CMakeLists.txt  newtonRaphsonIteration.cpp  newtonRaphsonIteration.hpp
src/startup/: CMakeLists.txt  startup.cpp  startup.hpp
